--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "adm-zip": "^0.5.10",
     "axios": "1.7.9",
     "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   },
