--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.18.1",
+    "mongoose": "^8.12.1",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
