--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "adm-zip": "^0.5.10",
     "axios": "1.7.9",
+    "bcrypt": "^5.1.1",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
