--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "adm-zip": "^0.5.10",
     "axios": "1.7.9",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4"
   },
