--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
-    "passport-discord": "^0.1.4"
+    "passport-discord": "^0.1.4",
+    "shortid": "^2.2.17"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
